better support for lua game object components started work on Lua PlayerCombatComponent